# Bet_service

./: .gitignore  README.md  docker-compose.yaml
bet_maker/: Dockerfile  pyproject.toml
bet_maker/src/: app.py  main.py
bet_maker/src/config/: config.py  enums.py
bet_maker/src/db/: database.py
bet_maker/src/db/migrations/: env.py
bet_maker/src/db/migrations/versions/: f927cfe361d5_initial.py
bet_maker/src/db/models/: __init__.py  base.py  bets.py
bet_maker/src/rmq_client/: consumer.py
bet_maker/src/routing/: __init__.py  bets.py  events.py
bet_maker/src/schemas/: bets.py  events.py
bet_maker/src/services/: bets.py
bet_maker/src/tasks/: closing_bets.py
line_provider/: .env.example  pyproject.toml
line_provider/src/: app.py  main.py
line_provider/src/config/: config.py  enums.py
line_provider/src/data/: events.py
line_provider/src/rmq_server/: publisher.py
line_provider/src/routing/: __init__.py  events.py
line_provider/src/schemas/: events.py
line_provider/src/tasks/: close_events.py  processing_events.py
