[tool.poetry]
name = "bet-maker"
version = "0.1.0"
description = ""
authors = ["Andrey Kazackov <AndreyKazackoB@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
fastapi = "^0.112.1"
pydantic-settings = "^2.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
alembic = "^1.13.2"
asyncpg = "^0.29.0"
aiohttp = "^3.10.5"
mypy = "^1.11.2"
aio-pika = "^9.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
